--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "14.15.0"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
