--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.11.14",
     "nodemon": "^2.0.7",
-    "pusher": "^4.0.2"
+    "pusher": "^4.0.2",
+    "validator": "^13.5.2"
   }
 }
